--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     implementation "com.github.skydoves:colorpicker-compose:1.0.0"
     implementation "me.saket.swipe:swipe:1.0.0"
     implementation "io.github.serpro69:kotlin-faker:1.13.0"
+    implementation "com.github.tehras:charts:0.2.4-alpha"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
