Implemented Reports Screen pagination + view model logic complete

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     implementation "me.saket.swipe:swipe:1.0.0"
     implementation "io.github.serpro69:kotlin-faker:1.13.0"
     implementation "com.github.tehras:charts:0.2.4-alpha"
+    implementation "com.google.accompanist:accompanist-pager:0.29.1-alpha"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
