--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,13 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+}
+
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id "io.sentry.android.gradle" version "3.4.2"
 }
 
 android {
@@ -61,6 +68,8 @@ dependencies {
     implementation "io.github.serpro69:kotlin-faker:1.13.0"
     implementation "com.github.tehras:charts:0.2.4-alpha"
     implementation "com.google.accompanist:accompanist-pager:0.29.1-alpha"
+    implementation 'io.sentry:sentry-android:6.13.1'
+    implementation 'io.sentry:sentry-compose-android:6.13.1'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
