--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,13 +7,13 @@ buildscript {
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id "io.sentry.android.gradle" version "3.4.2"
+    id "io.sentry.android.gradle" version "4.2.0"
     id 'io.realm.kotlin'
 }
 
 android {
     namespace 'com.nikolovlazar.goodbyemoney'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.nikolovlazar.goodbyemoney"
@@ -35,8 +35,8 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
     kotlinOptions {
         jvmTarget = '1.8'
@@ -45,7 +45,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.3.2'
+        kotlinCompilerExtensionVersion '1.4.3'
     }
     packagingOptions {
         resources {
@@ -55,28 +55,28 @@ android {
 }
 
 dependencies {
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
-    implementation 'io.realm.kotlin:library-base:1.6.0'
-    implementation "androidx.navigation:navigation-compose:2.5.3"
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-    implementation 'androidx.activity:activity-compose:1.3.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.1'
+    implementation 'io.realm.kotlin:library-base:1.11.0'
+    implementation "androidx.navigation:navigation-compose:2.7.7"
+    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.7.0'
+    implementation 'androidx.activity:activity-compose:1.8.2'
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
-    implementation 'androidx.compose.material3:material3:1.0.1'
-    implementation 'com.marosseleng.android:compose-material3-datetime-pickers:0.6.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
-    implementation "com.github.skydoves:colorpicker-compose:1.0.0"
+    implementation 'androidx.compose.material3:material3:1.2.0'
+    implementation 'com.marosseleng.android:compose-material3-datetime-pickers:0.7.2'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.7.0'
+    implementation "com.github.skydoves:colorpicker-compose:1.0.7"
     implementation "me.saket.swipe:swipe:1.0.0"
-    implementation "io.github.serpro69:kotlin-faker:1.13.0"
+    implementation "io.github.serpro69:kotlin-faker:1.15.0"
     implementation "com.github.tehras:charts:0.2.4-alpha"
     implementation "com.google.accompanist:accompanist-pager:0.29.1-alpha"
-    implementation 'io.sentry:sentry-android:6.13.1'
-    implementation 'io.sentry:sentry-compose-android:6.13.1'
+    implementation 'io.sentry:sentry-android:7.3.0'
+    implementation 'io.sentry:sentry-compose-android:7.3.0'
 
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
